--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
     "react": "18.2.0",
     "react-native": "0.70.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "14.8.3",
     "@nrwl/detox": "14.8.3",
     "@nrwl/eslint-plugin-nx": "14.8.3",
     "@nrwl/jest": "14.8.3",
     "@nrwl/linter": "14.8.3",
+    "@nrwl/nest": "^14.8.3",
+    "@nrwl/node": "14.8.3",
     "@nrwl/react-native": "14.8.3",
     "@nrwl/web": "14.8.3",
     "@nrwl/workspace": "14.8.3",
