--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -52,17 +53,19 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": ">=6",
     "jest": "28.1.1",
     "jest-circus": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-react-native": "18.0.0",
+    "lint-staged": ">=10",
     "metro": "0.72.2",
     "metro-babel-register": "0.72.2",
     "metro-react-native-babel-preset": "0.72.2",
     "metro-react-native-babel-transformer": "0.72.2",
     "metro-resolver": "0.72.2",
     "nx": "14.8.3",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "react-native-config": "1.4.6",
     "react-native-svg": "13.2.0",
     "react-native-svg-transformer": "1.0.0",
@@ -70,5 +73,14 @@
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
+  },
+  "lint-staged": {
+    "{apps,libs}/**/*.{js,jsx,ts,tsx}": [
+      "eslint",
+      "prettier --config .prettierrc --write"
+    ],
+    "*.md": [
+      "prettier --config .prettierrc --write"
+    ]
   }
 }
