--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,28 @@
 {
   "root": true,
   "ignorePatterns": ["**/*"],
-  "plugins": ["@nrwl/nx"],
+  "env": {
+    "es2021": true
+  },
+  "extends": ["eslint:recommended", "prettier"],
+  "plugins": ["@nrwl/nx", "prettier"],
+  "rules": {
+    "eqeqeq": ["error", "always"],
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true,
+        "useTabs": false,
+        "endOfLine": "lf",
+        "printWidth": 120,
+        "trailingComma": "es5",
+        "semi": true,
+        "jsxSingleQuote": true,
+        "arrowParens": "always"
+      }
+    ],
+    "yoda": ["error", "never"]
+  },
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
