--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "yarn-deduplicate": "^6.0.0"
   },
   "lint-staged": {
     "{apps,libs}/**/*.{js,jsx,ts,tsx}": [
@@ -82,6 +83,9 @@
     ],
     "*.md": [
       "prettier --write --print-width 80 --prose-wrap always"
+    ],
+    "yarn.lock": [
+      "yarn-deduplicate"
     ]
   }
 }
