--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nrwl/nest": "^14.8.3",
     "@nrwl/node": "14.8.3",
     "@nrwl/react-native": "14.8.3",
+    "@nrwl/storybook": "^14.8.3",
     "@nrwl/web": "14.8.3",
     "@nrwl/workspace": "14.8.3",
     "@react-native-async-storage/async-storage": "1.17.10",
