INHEART-114 - Add Storybook to mobile

--- a/package.json
+++ b/package.json
@@ -36,6 +36,13 @@
     "@react-native-community/cli": "9.1.1",
     "@react-native-community/cli-platform-android": "9.1.0",
     "@react-native-community/cli-platform-ios": "9.1.0",
+    "@storybook/addon-essentials": "~6.5.9",
+    "@storybook/addon-ondevice-actions": "^6.0.1-beta.5",
+    "@storybook/addon-ondevice-backgrounds": "^6.0.1-beta.5",
+    "@storybook/addon-ondevice-controls": "^6.0.1-beta.5",
+    "@storybook/addon-ondevice-notes": "^6.0.1-beta.5",
+    "@storybook/core-server": "~6.5.9",
+    "@storybook/react-native": "^6.0.1-beta.5",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/jest-native": "4.0.12",
     "@testing-library/react-native": "11.1.0",
@@ -65,6 +72,7 @@
     "nx": "14.8.3",
     "prettier": "^2.6.2",
     "react-native-config": "1.4.6",
+    "react-native-storybook-loader": "^2.0.5",
     "react-native-svg": "13.2.0",
     "react-native-svg-transformer": "1.0.0",
     "react-test-renderer": "18.2.0",
