--- a/apps/mobile/project.json
+++ b/apps/mobile/project.json
@@ -72,6 +72,15 @@
         "jestConfig": "apps/mobile/jest.config.ts",
         "passWithNoTests": true
       }
+    },
+    "storybook": {
+      "executor": "@nrwl/react-native:storybook",
+      "options": {
+        "searchDir": ["apps/mobile"],
+        "outputFile": "./.storybook/story-loader.js",
+        "pattern": "**/*.stories.@(js|jsx|ts|tsx|md)",
+        "silent": false
+      }
     }
   },
   "tags": []
