--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "native-base": "^3.4.17",
     "react": "18.2.0",
     "react-native": "0.70.1",
+    "react-native-gesture-handler": "^2.7.0",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
@@ -64,7 +70,7 @@
     "nx": "14.8.3",
     "prettier": "^2.6.2",
     "react-native-config": "1.4.6",
-    "react-native-svg": "13.2.0",
+    "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "1.0.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
