--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "react": "18.2.0",
     "react-native": "0.70.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-safe-area-view": "^1.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
