INHEART-114 - conflict resolved

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,7 +14,7 @@
     "@storybook/addon-ondevice-actions": "*",
     "@storybook/addon-ondevice-backgrounds": "*",
     "@storybook/addon-ondevice-controls": "*",
-    "@storybook/addon-ondevice-notes": "*"
+    "@storybook/addon-ondevice-notes": "*",
     "native-base": "*",
     "react-native-safe-area-context": "*"
   }
