--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
+    "start": "nx run-many --target=serve --projects=backend,mobile",
+    "start:android": "nx run-android mobile",
+    "start:ios": "nx run-ios mobile",
     "build": "nx build",
     "test": "nx test",
     "prepare": "husky install"
