--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
+    "start": "nx run-many --target=serve --projects=backend,mobile",
+    "start:android": "nx run-android mobile",
+    "start:ios": "nx run-ios mobile",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +22,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "14.8.3",
@@ -45,30 +49,38 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
+    "commitlint-config-jira": "^1.6.4",
+    "commitlint-plugin-function-rules": "^1.7.1",
+    "commitlint-plugin-jira-rules": "^1.6.4",
     "detox": "19.12.1",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.8",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.1",
     "jest": "28.1.1",
     "jest-circus": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-react-native": "18.0.0",
+    "lint-staged": "^13.0.3",
     "metro": "0.72.2",
     "metro-babel-register": "0.72.2",
     "metro-react-native-babel-preset": "0.72.2",
     "metro-react-native-babel-transformer": "0.72.2",
     "metro-resolver": "0.72.2",
     "nx": "14.8.3",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "react-native-config": "1.4.6",
     "react-native-svg": "13.2.0",
     "react-native-svg-transformer": "1.0.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "tsc-files": "^1.1.3",
+    "typescript": "~4.8.2",
+    "yarn-deduplicate": "^6.0.0"
   }
 }
