INHEART - 114 - add routing with sample sign in and homepage pages (#4)

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -10,6 +10,8 @@
     "react-native-config": "*",
     "react-native-svg": "*",
     "@react-native-async-storage/async-storage": "*",
+    "react-router-native": "*",
+    "styled-components": "*",
     "native-base": "*",
     "react-native-safe-area-context": "*"
   }
