--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@react-native-community/masked-view": "^0.1.11",
     "native-base": "^3.4.17",
     "react": "18.2.0",
+    "react-is": "18.2.0",
     "react-native": "0.70.1",
+    "react-router-native": "^6.4.2",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
+    "styled-components": "5.3.5",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -47,10 +50,13 @@
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.20",
+    "@types/react-is": "17.0.3",
     "@types/react-native": "0.70.3",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
+    "babel-plugin-styled-components": "1.10.7",
     "detox": "19.12.1",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
