--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.0",
+    "react-native-safe-area-view": "^1.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "styled-components": "5.3.5",
@@ -42,12 +43,20 @@
     "@nrwl/nest": "^14.8.3",
     "@nrwl/node": "14.8.3",
     "@nrwl/react-native": "14.8.3",
+    "@nrwl/storybook": "^14.8.3",
     "@nrwl/web": "14.8.3",
     "@nrwl/workspace": "14.8.3",
     "@react-native-async-storage/async-storage": "1.17.10",
     "@react-native-community/cli": "9.1.1",
     "@react-native-community/cli-platform-android": "9.1.0",
     "@react-native-community/cli-platform-ios": "9.1.0",
+    "@storybook/addon-essentials": "~6.5.9",
+    "@storybook/addon-ondevice-actions": "^6.0.1-beta.5",
+    "@storybook/addon-ondevice-backgrounds": "^6.0.1-beta.5",
+    "@storybook/addon-ondevice-controls": "^6.0.1-beta.5",
+    "@storybook/addon-ondevice-notes": "^6.0.1-beta.5",
+    "@storybook/core-server": "~6.5.9",
+    "@storybook/react-native": "^6.0.1-beta.5",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/jest-native": "4.0.12",
     "@testing-library/react-native": "11.1.0",
@@ -86,6 +95,7 @@
     "nx": "14.8.3",
     "prettier": "^2.7.1",
     "react-native-config": "1.4.6",
+    "react-native-storybook-loader": "^2.0.5",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "1.0.0",
     "react-test-renderer": "18.2.0",
