--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -10,6 +10,13 @@
     "react-native-config": "*",
     "react-native-svg": "*",
     "@react-native-async-storage/async-storage": "*",
+    "@storybook/react-native": "*",
+    "@storybook/addon-ondevice-actions": "*",
+    "@storybook/addon-ondevice-backgrounds": "*",
+    "@storybook/addon-ondevice-controls": "*",
+    "@storybook/addon-ondevice-notes": "*",
+    "react-router-native": "*",
+    "styled-components": "*",
     "native-base": "*",
     "react-native-safe-area-context": "*"
   }
