--- a/apps/mobile/project.json
+++ b/apps/mobile/project.json
@@ -36,10 +36,7 @@
     },
     "build-android": {
       "executor": "@nrwl/react-native:build-android",
-      "outputs": [
-        "apps/mobile/android/app/build/outputs/bundle",
-        "apps/mobile/android/app/build/outputs/apk"
-      ],
+      "outputs": ["apps/mobile/android/app/build/outputs/bundle", "apps/mobile/android/app/build/outputs/apk"],
       "options": {}
     },
     "bundle-android": {
@@ -71,6 +68,15 @@
       "options": {
         "jestConfig": "apps/mobile/jest.config.ts",
         "passWithNoTests": true
+      }
+    },
+    "storybook": {
+      "executor": "@nrwl/react-native:storybook",
+      "options": {
+        "searchDir": ["apps/mobile"],
+        "outputFile": "./.storybook/story-loader.js",
+        "pattern": "**/*.stories.@(js|jsx|ts|tsx|md)",
+        "silent": false
       }
     }
   },
