--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "^1.2.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "express-session": "^1.17.3",
+    "openid-client": "^5.1.10",
+    "passport": "^0.6.0",
     "react": "18.2.0",
     "react-native": "0.70.1",
     "reflect-metadata": "^0.1.13",
@@ -42,6 +49,7 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/jest-native": "4.0.12",
     "@testing-library/react-native": "11.1.0",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.20",
