INHEART-116 & INHEART-117: Add login screen elements to library & Create sign in page (#11)
* INHEART-113 - Native Base added

* add composite true

* Co-authored-by: pawelroguski <pawelroguski@users.noreply.github.com>

* INHEART-116 - Add atoms lib, remove old libs

* INHEART-116 - Fix button import in test

* INHEART-116 - Add Input and some refeactors for Button

* INHEART-116 - Add molecules, organisms, templates libs and FormControl atom

* INHEART-116 - Add Box atom

* INHEART-116 - Add Stack atom

* INHEART-116 - Add some atoms

* INHEART-116 - Add LoginFormControl molecule

* INHEART-116 - Add LoginTemplate

* INHEART-116 - Use LoginTemplate inside App.tsx

* INHEART-116 - Update LoginFormControl

* INHEART-116 - Update LoginTemplate

* INHEART-116:  UNHEART-88 merged

* INHEART-116: Adding Sample Stories

* INHEART-116: Some refactors

* INHEART-116: Change structure files

In libraries and components file structure changed.

* INHEART-116: Change primary color palette

Primary colors NativeBaseProvider palette
to fuchsia similar palette  changed

* INHEART-116: Add ScrollingView to LoginPage

* INHEART-116: Add LoginFormControl molecule story

* INHEART-116: LoginFormControll molecule refactor

* INHEART-117: After revies refactors

Delete console logs
Change login page logo from jpg to png
Delete unnecessary interfaces and  ESLints comments

Co-authored-by: Konrad Hanus <khanus@workforcesoftware.com>
Co-authored-by: Beata Kula <beata.kula@intive.com>
Co-authored-by: Przemek Musialik <przemyslaw.musialik@intive.com>
Co-authored-by: Paweł Roguski <pawel.roguski>
Co-authored-by: BeataKula <101329582+BeataKula@users.noreply.github.com>

--- a/apps/mobile/project.json
+++ b/apps/mobile/project.json
@@ -36,10 +36,7 @@
     },
     "build-android": {
       "executor": "@nrwl/react-native:build-android",
-      "outputs": [
-        "apps/mobile/android/app/build/outputs/bundle",
-        "apps/mobile/android/app/build/outputs/apk"
-      ],
+      "outputs": ["apps/mobile/android/app/build/outputs/bundle", "apps/mobile/android/app/build/outputs/apk"],
       "options": {}
     },
     "bundle-android": {
