--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,12 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@inheartive/ui/atoms": ["libs/ui/atoms/src/index.ts"],
+      "@inheartive/ui/molecules": ["libs/ui/molecules/src/index.ts"],
+      "@inheartive/ui/organisms": ["libs/ui/organisms/src/index.ts"],
+      "@inheartive/assets": ["apps/mobile/src/app/assets"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
