--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "react": "18.2.0",
     "react-is": "18.2.0",
     "react-native": "0.70.1",
-    "react-router-native": "^6.4.2",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.0",
     "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^3.18.0",
+    "react-router-native": "^6.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "styled-components": "5.3.5",
@@ -50,6 +50,7 @@
     "@react-native-community/cli": "9.1.1",
     "@react-native-community/cli-platform-android": "9.1.0",
     "@react-native-community/cli-platform-ios": "9.1.0",
+    "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "~6.5.9",
     "@storybook/addon-ondevice-actions": "^6.0.1-beta.5",
     "@storybook/addon-ondevice-backgrounds": "^6.0.1-beta.5",
