--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
   },
   "private": true,
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "expo-font": "^10.2.1",
     "native-base": "^3.4.17",
     "react": "18.2.0",
     "react-is": "18.2.0",
     "react-native": "0.70.1",
-    "react-router-native": "^6.4.2",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.0",
     "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^3.18.0",
+    "react-router-native": "^6.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "styled-components": "5.3.5",
