Revert "INHEART-142: Added required icons to the atom."
This reverts commit df3dc1fd61f6b953e20667a85213273543e65d77.

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,7 +18,6 @@
     "react-router-native": "*",
     "styled-components": "*",
     "native-base": "*",
-    "react-native-safe-area-context": "*",
-    "@expo/vector-icons": "*"
+    "react-native-safe-area-context": "*"
   }
 }
