--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,8 @@
       "@inheartive/ui/atoms": ["libs/ui/atoms/src/index.ts"],
       "@inheartive/ui/molecules": ["libs/ui/molecules/src/index.ts"],
       "@inheartive/ui/organisms": ["libs/ui/organisms/src/index.ts"],
-      "@inheartive/assets": ["apps/mobile/src/app/assets"]
+      "@inheartive/assets": ["apps/mobile/src/app/assets"],
+      "@inheartive/ui/theme": ["libs/ui/theme/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
