--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "react": "18.2.0",
     "react-is": "18.2.0",
     "react-native": "0.70.1",
-    "react-router-native": "^6.4.2",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.0",
     "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^3.18.0",
+    "react-router-native": "^6.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "styled-components": "5.3.5",
@@ -84,6 +84,7 @@
     "husky": "^8.0.1",
     "jest": "28.1.1",
     "jest-circus": "28.1.1",
+    "jest-each": "^29.2.0",
     "jest-environment-jsdom": "28.1.1",
     "jest-react-native": "18.0.0",
     "lint-staged": "^13.0.3",
