--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,6 +18,8 @@
     "react-router-native": "*",
     "styled-components": "*",
     "native-base": "*",
-    "react-native-safe-area-context": "*"
+    "react-native-safe-area-context": "*",
+    "jest-each": "*",
+    "react-native-vector-icons": "*"
   }
 }
