--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,10 +15,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@inheartive/assets": ["apps/mobile/src/app/assets"],
+      "@inheartive/ui/assets": ["libs/ui/assets/src/index.ts"],
       "@inheartive/ui/atoms": ["libs/ui/atoms/src/index.ts"],
       "@inheartive/ui/molecules": ["libs/ui/molecules/src/index.ts"],
       "@inheartive/ui/organisms": ["libs/ui/organisms/src/index.ts"],
-      "@inheartive/assets": ["apps/mobile/src/app/assets"],
       "@inheartive/ui/theme": ["libs/ui/theme/src/index.ts"]
     }
   },
