INHEART-102-TESTS-PROPOSAL: Add testing lib, improve Badge test

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,7 @@
       "@inheartive/ui/atoms": ["libs/ui/atoms/src/index.ts"],
       "@inheartive/ui/molecules": ["libs/ui/molecules/src/index.ts"],
       "@inheartive/ui/organisms": ["libs/ui/organisms/src/index.ts"],
+      "@inheartive/ui/testing": ["libs/ui/testing/src/index.ts"],
       "@inheartive/ui/theme": ["libs/ui/theme/src/index.ts"]
     }
   },
