INHEART-142: Modify & slightly refactor Icon atom component and add new icons (#16)
* INHEART-142: Modify & slightly refactor Icon atom component

Create posibility to get specific icon by passing icon's name
by component props
Delete old SignIn page (apps/mobile/src/app/pages/SignIn)

* INHEART-142: Added required icons to the atom.

* Revert "INHEART-142: Added required icons to the atom."

This reverts commit df3dc1fd61f6b953e20667a85213273543e65d77.

* INHEART-142: Added storybook for icons.

* INHEART-142: Added jest-each dependency and modify test for icons

* INHEART-142: Add react-native-vector-icons library

Add new icons cases to ui atom icon's library

* INHEART-142: Added library for ios with icons

* INHEART-142: Added icon

* INHEART-142: Change test for Icons atoms

Fix bug which occur test issue

* INHEART-142: Refactoring

* INHEART-142: Add enum type instead of simple type

Add enum type instead of simple type for all icons set
Refactor Icons atom librarary
Change icons set from array to enum in story for StoryBook
Change icons set from array to enum in test

* INHEART-142: Refactor Icons

* INHEART-142: Refactor Icons

* INHEART-142: Change test case name

Co-authored-by: Paweł Roguski <pawel.roguski>
Co-authored-by: KonradKarlinski <konrad.karlinski@intive.com>
Co-authored-by: Przemek Musialik <przemyslaw.musialik@intive.com>

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -19,6 +19,7 @@
     "styled-components": "*",
     "native-base": "*",
     "react-native-safe-area-context": "*",
-    "@storybook/addon-actions": "*"
+    "jest-each": "*",
+    "react-native-vector-icons": "*"
   }
 }
