--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inheartive",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "start": "nx run-many --target=serve --projects=backend,mobile",
@@ -15,10 +15,20 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "native-base": "^3.4.17",
     "react": "18.2.0",
+    "react-is": "18.2.0",
     "react-native": "0.70.1",
+    "react-router-native": "^6.4.2",
+    "react-native-gesture-handler": "^2.7.0",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.0",
+    "react-native-safe-area-view": "^1.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
+    "styled-components": "5.3.5",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -33,22 +43,33 @@
     "@nrwl/nest": "^14.8.3",
     "@nrwl/node": "14.8.3",
     "@nrwl/react-native": "14.8.3",
+    "@nrwl/storybook": "^14.8.3",
     "@nrwl/web": "14.8.3",
     "@nrwl/workspace": "14.8.3",
     "@react-native-async-storage/async-storage": "1.17.10",
     "@react-native-community/cli": "9.1.1",
     "@react-native-community/cli-platform-android": "9.1.0",
     "@react-native-community/cli-platform-ios": "9.1.0",
+    "@storybook/addon-essentials": "~6.5.9",
+    "@storybook/addon-ondevice-actions": "^6.0.1-beta.5",
+    "@storybook/addon-ondevice-backgrounds": "^6.0.1-beta.5",
+    "@storybook/addon-ondevice-controls": "^6.0.1-beta.5",
+    "@storybook/addon-ondevice-notes": "^6.0.1-beta.5",
+    "@storybook/core-server": "~6.5.9",
+    "@storybook/react-native": "^6.0.1-beta.5",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/jest-native": "4.0.12",
     "@testing-library/react-native": "11.1.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.20",
+    "@types/react-is": "17.0.3",
     "@types/react-native": "0.70.3",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
+    "babel-plugin-styled-components": "1.10.7",
     "commitlint-config-jira": "^1.6.4",
     "commitlint-plugin-function-rules": "^1.7.1",
     "commitlint-plugin-jira-rules": "^1.6.4",
@@ -74,7 +95,8 @@
     "nx": "14.8.3",
     "prettier": "^2.7.1",
     "react-native-config": "1.4.6",
-    "react-native-svg": "13.2.0",
+    "react-native-storybook-loader": "^2.0.5",
+    "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "1.0.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
