INHEART-152: Add CategoryFilter, init auctions

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@inheartive/assets": ["apps/mobile/src/app/assets"],
+      "@inheartive/data": ["libs/data/src/index.ts"],
       "@inheartive/ui/assets": ["libs/ui/assets/src/index.ts"],
       "@inheartive/ui/atoms": ["libs/ui/atoms/src/index.ts"],
       "@inheartive/ui/molecules": ["libs/ui/molecules/src/index.ts"],
