--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@inheartive/data": ["libs/data/src/index.ts"],
+      "@inheartive/ui/assets": ["libs/ui/assets/src/index.ts"],
       "@inheartive/assets": ["apps/mobile/src/app/assets/index.ts"],
       "@inheartive/ui/atoms": ["libs/ui/atoms/src/index.ts"],
       "@inheartive/ui/molecules": ["libs/ui/molecules/src/index.ts"],
