--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start:ios": "nx run-ios mobile",
     "build": "nx build",
     "test": "nx test",
-    "prepare": "husky install",
-    "graph": "nx graph -dep"
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
