INHEART-94: Add build command

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start:android": "nx run-android mobile",
     "start:ios": "nx run-ios mobile",
     "build": "nx build",
+    "build:android": "nx build-android",
+    "build:ios": "nx build-ios",
     "test": "nx test",
     "prepare": "husky install"
   },
