INHEART-149: Add FooterMenu component

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -20,6 +20,7 @@
     "native-base": "*",
     "react-native-safe-area-context": "*",
     "jest-each": "*",
-    "react-native-vector-icons": "*"
+    "react-native-vector-icons": "*",
+    "@storybook/addon-actions": "*"
   }
 }
