--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -3,21 +3,23 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-native": "*",
-    "@testing-library/react-native": "*",
     "react": "*",
     "react-native": "*",
     "react-native-config": "*",
     "react-native-svg": "*",
     "@react-native-async-storage/async-storage": "*",
+    "react-router-native": "*",
+    "styled-components": "*",
+    "native-base": "*",
+    "react-native-safe-area-context": "*"
+  },
+  "devDependencies": {
     "@storybook/react-native": "*",
     "@storybook/addon-ondevice-actions": "*",
     "@storybook/addon-ondevice-backgrounds": "*",
     "@storybook/addon-ondevice-controls": "*",
     "@storybook/addon-ondevice-notes": "*",
-    "react-router-native": "*",
-    "styled-components": "*",
-    "native-base": "*",
-    "react-native-safe-area-context": "*"
+    "@testing-library/jest-native": "*",
+    "@testing-library/react-native": "*"
   }
 }
