--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,34 +9,15 @@ jobs:
   myjob:
     runs-on: ubuntu-latest
     name: Build Android
-    steps:
+   steps:
       - uses: actions/checkout@v2
         with:
-          # We need to fetch all branches and commits so that Nx affected has a base to compare against.
           fetch-depth: 0
+      - uses: nrwl/nx-set-shas@v3
+      - run: npm ci
 
-      # In any subsequent steps within this job (myjob) we can reference the resolved SHAs
-      # using either the step outputs or environment variables:
-
-      # ===========================================================================
-      # OPTION 1) Environment variables
-      # ===========================================================================
-      # - name: Derive appropriate SHAs for base and head for `nx affected` commands
-      #   uses: nrwl/nx-set-shas@v3
-    
-      # - run: |
-      #     echo "BASE: ${{ env.NX_BASE }}"
-      #     echo "HEAD: ${{ env.NX_HEAD }}"
-
-      # ===========================================================================
-      # OPTION 2) Step outputs (in this case we must give the step an "id")
-      # ===========================================================================
-      # - name: Derive appropriate SHAs for base and head for `nx affected` commands
-      #   id: setSHAs
-      #   uses: nrwl/nx-set-shas@v3
-    
-      # - run: |
-      #     echo "BASE: ${{ steps.setSHAs.outputs.base }}"
-      #     echo "HEAD: ${{ steps.setSHAs.outputs.head }}"
-
-      # ... more CI config ...
+      - run: npx nx workspace-lint
+      - run: npx nx format:check
+      - run: npx nx affected --target=lint --parallel=3
+      - run: npx nx affected --target=test --parallel=3 --ci --code-coverage
+      - run: npx nx affected --target=build --parallel=3
