--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,12 @@ on:
     branches:
       - main
       - release
-  pull_request:
 
 jobs:
-  myjob:
+  build:
     runs-on: ubuntu-latest
     name: Build Android
+    
    steps:
       - uses: actions/checkout@v2
         with:
