--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,20 +8,20 @@ on:
       - main
       - release
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    name: Build Android
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     name: Build Android
 
-   steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: nrwl/nx-set-shas@v3
-      - run: npm ci
+#    steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           fetch-depth: 0
+#       - uses: nrwl/nx-set-shas@v3
+#       - run: npm ci
 
-      - run: npx nx workspace-lint
-      - run: npx nx format:check
-      - run: npx nx affected --target=lint --parallel=3
-      - run: npx nx affected --target=test --parallel=3 --ci --code-coverage
-      - run: npx nx affected --target=build --parallel=3
+#       - run: npx nx workspace-lint
+#       - run: npx nx format:check
+#       - run: npx nx affected --target=lint --parallel=3
+#       - run: npx nx affected --target=test --parallel=3 --ci --code-coverage
+#       - run: npx nx affected --target=build --parallel=3
