--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
 name: example-workflow
-on: [push]
+on:
+  push:
+    branches:
+      - release
 jobs:
-  production-deploy:
-    if: github.repository == 'konradhanus/inheartive.io'
+  build-android:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
