--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,4 +9,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-      - run: npm install -g react-native
+      - run: npm install -g yarn
+      - run: yarn install
+      - run: nx run mobile:build-android
