--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,11 @@
-name: example-workflow
+name: android-build
 on: [push]
 jobs:
   build-android:
     if: github.repository == 'konradhanus/inheartive.io'
     runs-on: ubuntu-latest
     steps:
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
@@ -12,3 +13,4 @@ jobs:
       - run: yarn install
       - run: npm install -g nx
       - run: nx run mobile:build-android
+      - run: echo "🎉 This job's status is ${{ job.status }}. 🎉"
