--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,18 @@
 name: android-build
-run-name: ${{ github.actor }} is build android application 🚀
-on: [push]
-branches:
-  - relese
+on:
+  push:
+    branches:
+      - relese
 jobs:
-  both-matrix:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-    if: github.repository == 'konradhanus/inheartive.io'
+  build-android:
+    runs-on: ubuntu-latest
     steps:
-      - run:  echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
       - run: yarn install
       - run: npm install -g nx
-      - run: nx run mobile:build-android
-      - run: echo "🎉 This job's status is ${{ job.status }}. 🎉"
+      - run: nx build-android mobile
+      - run: echo "🎉 ${{ job.status }}. 🎉"
