--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,3 +16,6 @@ jobs:
       - run: npm install -g nx
       - run: nx build-android mobile
       - run: echo "🎉 ${{ job.status }}. 🎉"
+      - name: Generate App APK
+        run: |
+          cd android && ./gradlew assembleRelease --no-daemon
