--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,29 @@ jobs:
       - name: Building App
         id: building_app
         run: nx build-android mobile
+      - name: Sign App Bundle
+        id: sign_app
+        uses: r0adkll/sign-android-release@v1
+        with:
+          releaseDirectory: apps/mobile/android/app/build/outputs
+          # ANDROID_SIGNING_KEY: The base64 encoded signing key used to sign your app
+          signingKeyBase64: ${{ secrets.ANDROID_SIGNING_KEY }}
+          # ANDROID_ALIAS: The alias of your signing key
+          alias: ${{ secrets.ANDROID_ALIAS }} 
+          # ANDROID_KEY_STORE_PASSWORD: The password to your signing Keystore
+          keyStorePassword: ${{ secrets.ANDROID_KEY_STORE_PASSWORD }}
+          # ANDROID_KEY_PASSWORD: The private key password for your signing Keystore
+          keyPassword: ${{ secrets.ANDROID_KEY_PASSWORD }}
+
+      ## Distribute  App to google play alpha track
+      - name: Upload App to Google Play
+        uses: r0adkll/upload-google-play@v1
+        with:
+        # ANDROID_SERVICE_ACCOUNT_JSON_TEXT: Private key for Google Play APi Bitrise Deploy
+          serviceAccountJsonPlainText: ${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON_TEXT }}
+          packageName: com.test.test
+          releaseFiles: android/app/build/outputs/bundle/release/*.aab
+          track: alpha
+          status: completed
+          inAppUpdatePriority: 2
+            - run: echo "🎉 ${{ job.status }}. 🎉"
