--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "native-base": "^3.4.17",
-    "react": "18.1.0",
-    "react-is": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-is": "18.2.0",
     "react-native": "0.70.1",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-reanimated": "^2.10.0",
@@ -50,7 +51,7 @@
     "@react-native-community/cli": "9.1.1",
     "@react-native-community/cli-platform-android": "9.1.0",
     "@react-native-community/cli-platform-ios": "9.1.0",
-    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-essentials": "~6.5.9",
     "@storybook/addon-ondevice-actions": "^6.0.1-beta.5",
     "@storybook/addon-ondevice-backgrounds": "^6.0.1-beta.5",
     "@storybook/addon-ondevice-controls": "^6.0.1-beta.5",
