INHEART-282: Add validation packages

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "native-base": "^3.4.17",
     "pg": "^8.8.0",
     "react": "18.2.0",
