--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -27,6 +28,8 @@
     "native-base": "^3.4.17",
     "openid-client": "^5.1.10",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-oauth2": "^1.6.1",
     "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -78,6 +81,8 @@
     "@types/express-session": "^1.17.5",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/passport-jwt": "^3.0.7",
+    "@types/passport-oauth2": "^1.4.11",
     "@types/react": "18.0.20",
     "@types/react-is": "17.0.3",
     "@types/react-native": "0.70.3",
