--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,8 @@
 MODE=dev
 
-DB_HOST=localhost   
+DB_HOST=localhost
 DB_USER=postgres
 DB_PASSWORD=pass123
+
+ASSET_MAX_UPLOAD_SIZE=5242880
+ASSET_UPLOAD_PATH=./apps/backend/src/assets
