--- a/apps/mobile/ios/inHEARTive.xcodeproj/xcshareddata/xcschemes/inHEARTive.xcscheme
+++ b/apps/mobile/ios/inHEARTive.xcodeproj/xcshareddata/xcschemes/inHEARTive.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Mobile.app"
-               BlueprintName = "Mobile"
-               ReferencedContainer = "container:Mobile.xcodeproj">
+               BuildableName = "inHEARTive.app"
+               BlueprintName = "inHEARTive"
+               ReferencedContainer = "container:inHEARTive.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "MobileTests.xctest"
-               BlueprintName = "MobileTests"
-               ReferencedContainer = "container:Mobile.xcodeproj">
+               BuildableName = "inHEARTiveTests.xctest"
+               BlueprintName = "inHEARTiveTests"
+               ReferencedContainer = "container:inHEARTive.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Mobile.app"
-            BlueprintName = "Mobile"
-            ReferencedContainer = "container:Mobile.xcodeproj">
+            BuildableName = "inHEARTive.app"
+            BlueprintName = "inHEARTive"
+            ReferencedContainer = "container:inHEARTive.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Mobile.app"
-            BlueprintName = "Mobile"
-            ReferencedContainer = "container:Mobile.xcodeproj">
+            BuildableName = "inHEARTive.app"
+            BlueprintName = "inHEARTive"
+            ReferencedContainer = "container:inHEARTive.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
