--- a/apps/mobile/android/settings.gradle
+++ b/apps/mobile/android/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'Mobile'
+rootProject.name = 'inHEARTive'
 
 include ':react-native-config'
 project(':react-native-config').projectDir = new File(rootProject.projectDir, '../../../node_modules/react-native-config/android')
